# homework

./: CMakeLists.txt
HomeWork1/: CMakeLists.txt  HomeWork1.cpp  HomeWork1.h
HomeWork2/: CMakeLists.txt  HomeWork2.cpp  HomeWork2.h
HomeWork3/: CMakeLists.txt  HomeWork3.cpp  HomeWork3.h
HomeWork4/: CMakeLists.txt  HomeWork4.cpp  HomeWork4.h
HomeWork6v2/: CMakeLists.txt  HomeWork6v2.cpp  HomeWork6v2.h  Vector2.cpp  Vector2.h
Homework5/: CMakeLists.txt  Homework5.cpp  Homework5.h
